traces/bug_788.txt
examples++-load/cmaes.cpp:1785: error: DEAD_STORE
  The value written to &i (type int) is never used.
Showing all 1 steps of the trace


examples++-load/cmaes.cpp:1785:5: Write of unused value
1783.     if (t->flgCheckEigen)
1784.       /* needs O(n^3)! writes, in case, error message in error file */ 
1785.       i = Check_Eigen( N, t->C, t->rgD, t->B);
            ^
1786.     
1787.   #if 0 
